EF创建数据库并添加登录验证

--- a/MVCDemo/MVCDemo.csproj
+++ b/MVCDemo/MVCDemo.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="DAL\AccountInitializer.cs" />
     <Compile Include="Models\SysRole.cs" />
     <Compile Include="Models\SysUser.cs" />
     <Compile Include="Models\SysUserRole.cs" />
