--- a/MVCDemo/Web.config
+++ b/MVCDemo/Web.config
@@ -45,6 +45,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
+    <contexts>
+      <context type="MVCDemo.DAL.AccountContext,MVCDemo">
+        <databaseInitializer type="MVCDemo.DAL.AccountInitializer,MVCDemo"></databaseInitializer>
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
